# condorcet

./: condorcet.py  pyproject.toml
votes/: test_1_unnamed_columns.csv  test_2_nans_to_drop.csv  votes.csv
