[tool.poetry]
name = "condorcet"
version = "0.1.0"
description = ""
authors = ["tas17 <35601762+tas17@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
